tests/paczka1/fuzzy1/58487048.err
Error in line 8: DITj1L A219 28,1
Error in line 12: DITj1L S673 46,5
Error in line 13: DITj1L A573 17,6
Error in line 2: P70QKLk7oK A571 84,5
Error in line 33: CDBwQhBGM1 A573 69,1
Error in line 31: P70QKLk7oK S673 93,3
